--- a/package.json
+++ b/package.json
@@ -16,37 +16,37 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
-    "@astrojs/rss": "^4.0.9",
-    "@resvg/resvg-js": "^2.4.1",
-    "astro": "^5.0.0-beta.6",
+    "@astrojs/rss": "^4.0.12",
+    "@resvg/resvg-js": "^2.6.2",
+    "astro": "^5.13.4",
     "fuse.js": "^6.6.2",
     "github-slugger": "^2.0.0",
     "remark-collapse": "^0.1.2",
     "remark-toc": "^8.0.1",
     "satori": "^0.8.1",
-    "tailwindcss": "^3.4.14",
-    "typescript": "^5.6.3"
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.9.2"
   },
   "devDependencies": {
-    "@astrojs/react": "^3.6.2",
-    "@astrojs/sitemap": "^3.2.1",
-    "@astrojs/tailwind": "^5.1.2",
-    "@divriots/jampack": "^0.11.2",
-    "@tailwindcss/typography": "^0.5.9",
+    "@astrojs/react": "^3.6.3",
+    "@astrojs/sitemap": "^3.5.1",
+    "@astrojs/tailwind": "^5.1.5",
+    "@divriots/jampack": "^0.11.7",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/github-slugger": "^1.3.0",
-    "@types/react": "^18.2.6",
-    "@typescript-eslint/parser": "^5.59.5",
+    "@types/react": "^18.3.24",
+    "@typescript-eslint/parser": "^5.62.0",
     "astro-eslint-parser": "^0.14.0",
-    "commitizen": "^4.3.0",
+    "commitizen": "^4.3.1",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^8.40.0",
-    "eslint-plugin-astro": "^0.27.0",
+    "eslint": "^8.57.1",
+    "eslint-plugin-astro": "^0.27.2",
     "husky": "^8.0.3",
-    "lint-staged": "^13.2.2",
+    "lint-staged": "^13.3.0",
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.2.8",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "config": {
     "commitizen": {
